--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -469,7 +469,7 @@ code, pre {
 }
 code {
   padding: 3px 4px;
-  color: #d14;
+  color: #540b0b;
   background-color: #f7f7f9;
   border: 1px solid #e1e1e8;
 }
