Jekyll is awesome.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,13 +18,17 @@
                                                                                             href="#docsmenu">Documentation
                     <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="docs/foreword.html">Foreword</a></li>
-                        <li><a href="docs/setup.html">Setup</a></li>
+                        <li><a href="foreword.html">Foreword</a></li>
+                        <li><a href="setup.html">Setup</a></li>
                         <li class="divider"></li>
-                        <li><a href="docs/keystore.html">Keystore</a></li>
-                        <li><a href="docs/key.html">Key</a></li>
-                        <li><a href="docs/sign-s.html">Signature (with single key)</a></li>
-                        <li><a href="docs/sign-m.html">Signature (with multiple keys)</a></li>
+                        <li><a href="keystore.html">Keystore</a></li>
+                        <li><a href="key.html">Key</a></li>
+                        <li><a href="signature-s.html">Signature (with single key)</a></li>
+                        <li><a href="signature-m.html">Signature (with multiple keys)</a></li>
+                        <li><a href="symmetric-encryption.html">Symmetric Encryption</a></li>
+                        <li><a href="asymmetric-encryption.html">Asymmetric Encryption</a></li>
+                        <li><a href="message-digests.html">Message Digests</a></li>
+                        <li><a href="message-authentication-codes.html">Message Authentication Codes</a></li>
                     </ul>
                     </li>
                     <li
