Work in progress

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -33,10 +33,10 @@
                     </li>
                     <li
                     {% if page.navbar.active_item == 'changelog' %} class="active"{% endif %}><a
-                        href="documentation.html#changelog">ChangeLog</a></li>
+                        href="changelog.html">ChangeLog</a></li>
                     <li
                     {% if page.navbar.active_item == 'roadmap' %} class="active"{% endif %}><a
-                        href="documentation.html#roadmap">RoadMap</a></li>
+                        href="roadmap.html">RoadMap</a></li>
                     <li><a href="https://github.com/mcaserta/spring-crypto-utils">GitHub</a></li>
                 </ul>
             </div>
