Cleanups, Google Analytics fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
         }
     </style>
     <link rel="shortcut icon" href="assets/img/favicon.ico">
+    {% include google-analytics.html %}
 </head>
 
 <body>
