--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -17,6 +17,7 @@
         }
     </style>
     <link rel="shortcut icon" href="assets/img/favicon.ico">
+    {% include google-analytics.html %}
 </head>
 <body>
 <div class="container">
