Certificate docs added

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,6 +21,7 @@
                         <li class="divider"></li>
                         <li><a href="keystore.html">Keystore</a></li>
                         <li><a href="key.html">Key</a></li>
+                        <li><a href="certificate.html">Certificate</a></li>
                         <li><a href="signature-s.html">Signature (with single key)</a></li>
                         <li><a href="signature-m.html">Signature (with multiple keys)</a></li>
                         <li><a href="symmetric-encryption.html">Symmetric Encryption</a></li>
